# thumbgen

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  tests.yml
src/: config.rs  error.rs  font.rs  image_process.rs  main.rs
